--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: > # this means to ignore newlines until "baseurl:"
   En este blog hablaré de temas relacionados con el gimnasio.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: Adrià Soto
+twitter_username: adria.sototortola
 github_username: adriisotuu
 
 # Build settings
